# MPI-mat

./: .clang-tidy  CMakeLists.txt  default.env.cmake
app/: CMakeLists.txt  mat.cpp  mpimat.cpp
cmake/: depend.cmake
lib/: CMakeLists.txt
lib/MPI_mat/: cpp  hpp  mat.cpp  mat.hpp  mpi.cpp  mpi.hpp
test/: CMakeLists.txt
test/MPI_mat/: CMakeLists.txt  mat.cpp  mpi.cpp
